# ARM2D-with-ST-ARM-CLANG

./: .gitmodules  .mxproject  CMakeLists.txt  STM32G474XX_FLASH.ld  STM32G474_CLANG.ioc
Arm-2D_Port/Cfg/: arm_2d_cfg.h
Arm-2D_Port/adapter/: arm_2d_disp_adapter_0.h
Core/Inc/: main.h  spi.h  stm32g4xx_it.h
Core/Src/: gpio.c  main.c  spi.c  stm32g4xx_it.c
User/: LCD_1in3.c  LCD_1in3.h  lcd.c  lcd.h
cmake/: arm2d.cmake.xxx  starm-clang.cmake
cmake/arm2d/: CMakeLists.txt
cmake/perf_counter/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
